# detection-aggregator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  docker_push.sh  main.py  path  pyproject.toml  settings.template.yaml  start_make.sh
.github/workflows/: build-publish-latest.yml  create-release.yml  pr-build-poetry.yml  pr-build.yml
aggregator/: aggregator.py  chunk.py  chunkHandler.py  config.py  stage.py
cache-init/: pyproject.toml
debian/: changelog  control  detection-aggregator.service  install  postinst  preinst  prerm
deployment/compose/: docker-compose.yml
deployment/compose/detection-aggregator/: detection-aggregator.settings.yaml
tests/: sae_message.txt  sae_message_detections.json  test.json  test_aggregator.py
