[tool.poetry]
package-mode = false
name = "aggregator"
version = "0.1.0"
description = "This component consumes Anomalies from Valkey, save videos and sends reporting data to receivers like ai-cockpit."
authors = ["witchpou <anett.huebner@starwit.de>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.2" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "^5.2.1"
pydantic = "2.11.7"
pydantic-settings = "2.8.1"
prometheus-client = "^0.21.1"
tensorrt-cu12 = {version = "^10.0.1", source = "nvidia"}
tensorrt-cu12-libs = {version = "^10.0.1", source = "nvidia"}
tensorrt-cu12-bindings = {version = "^10.0.1", source = "nvidia"}
ultralytics = "^8.2.15"
pytest = "8.4.1"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
