[tool.poetry]
package-mode = false
name = "aggregator"
version = "0.1.18"
description = "This component consumes Anomalies from Valkey, save videos and sends reporting data to receivers like ai-cockpit."
authors = ["witchpou <anett.huebner@starwit.de>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.2.2" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "5.3.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
prometheus-client = "0.22.1"
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
