[tool.poetry]
package-mode = false
name = "aggregator"
version = "0.2.1"
description = "This component collects geomapped data and creates time/space aggregation."
authors = ["witchpou <anett.huebner@starwit.de>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.4.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
redis = "5.3.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
prometheus-client = "0.22.1"
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
